# python-project-lvl2

./: .coverage  Makefile  README.md  coverage.xml  file1 copy.yml  file1.yml  output.json  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  lint.yml
gendiff/: for.py  gdiff.py  generate_diff.py  generate_diff_temp.py  parse.py  pyyml.py  test_1.py
gendiff/scripts/: __init__.py  gendiff.py
hexlet_code/scripts/: gendiff.py
tests/: test_1.py
tests/fixtures/: values.py
