[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = ""
authors = ["maniackaa <maniac_kaa@mail.ru>"]
packages = [
  { include = "hexlet_code" },
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"